--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "react-gh-pages",
-  "version": "0.1.0",
+  "name": "gg-clicky-game",
+  "version": "1.0",
   "private": true,
-  "homepage": "http://gitname.github.io/react-gh-pages",
+  "homepage": "http://gitname.github.io/gg-clicky-game",
   "dependencies": {
     "react": "^15.5.4",
     "react-dom": "^15.5.4"
