--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "gg-clicky-game",
-  "version": "1.0",
+  "name": "clicky",
+  "version": "0.1.0",
   "private": true,
   "homepage": "http://gitname.github.io/gg-clicky-game",
   "dependencies": {
+    "npm": "^6.1.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4"
   },
@@ -16,7 +17,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"    
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build"
   }
 }
